# nts-pool

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  compose-config-updater.sh  compose.yml  deny.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: client_request.rs  key_exchange_response.rs  record.rs  server_information_response.rs
nts-pool-dns/: Cargo.toml  pool-spec.md
nts-pool-dns/src/: cli.rs  config.rs  geo_handler.rs  main.rs  util.rs
nts-pool-dns/testdata/: testservers.json  unsafe.pool.toml
nts-pool-ke/: Cargo.toml  base-shared-secret  monitoring.json  servers.json  unsafe.nts.client.toml  unsafe.pool.toml
nts-pool-ke/src/: cli.rs  config.rs  error.rs  haproxy.rs  lib.rs  pool_ke.rs  servers.rs  telemetry.rs  util.rs
nts-pool-ke/testdata/: a.ntpd-rs.toml  a.test.fullchain.pem  a.test.key  a.test.pem  b.ntpd-rs.toml  b.test.fullchain.pem  b.test.key  b.test.pem  end.fullchain.pem  end.key  end.pem  gen-cert.sh  pool.test.fullchain.pem  pool.test.key  pool.test.pem  testservers.json  time-a.fullchain.pem  time-a.key  time-a.pem  time-b.fullchain.pem  time-b.key  time-b.pem
nts-pool-management/: .env  Cargo.toml
nts-pool-management/.sqlx/: query-010360764fff9244634cc365dbcb230c5ac61ce0fbd1691108d06a5cd075e954.json  query-016b6de9834423b123492e8f2a26e549b28943cf070bceb744e5585540f08d98.json  query-04b8a57bbfdebc759ceb2b2e6d90e31e7da655f41e8841d78c1434a0c678ff04.json  query-095866542b1b9076fcc9bef44638e25eb10cad865d6efffb3d48079405842369.json  query-0ad2540a89f452250371eed6f50fd5b31596f14972d7449a302508462b32d6c2.json  query-0b5bb1ad9db865bc57d1b0cea51d5fc3f148816e7ea7eb2740265df32f4c35da.json  query-0c6f1979fb4c8ddefeeddf950aa18d9a25a70961d96306dec0d40a7b8f61976a.json  query-0e2e42f27ec7021c4e3d1c27d631602ff4773e451c8a7e9d38dc7d0a95775e2d.json  query-171a166b3904d3adc72871e46be498526c402b598ad4ac3043581eb4e0b0ced6.json  query-219310a5eb5581288630e5c198c987532f15289f387221d38d11be551123fbcc.json  query-23e14991da5a902f07e1bf53b770f3193f36a6f78071d5e7ad438269e45feaf8.json  query-245b298b79d22dc8da624a69e912cdac88731814f808e4d79a5cce89d135c58f.json  query-28bd63375523d07ac7030c593e7942443acfa36ad079868a3ba0b5b351c64f61.json  query-2b44c995e2d696f9399dfd4b11f38325b0e8133e31fc3d17085401b5059a6bb6.json  query-2f27369bfd0084c5a4b29b8753a9e59c9be69c414f03f3b73eaf6b32a5540ce1.json  query-318ee78c8262d893801734a828ffbf56732d2261137ceb842b256c8bf1bf22f8.json  query-31d4ce07c537f10111af5dd81bdd7db63d70d3c6f962a3313bf7f9d345d28dde.json  query-32005edf2c8474a112a2593a2a6b350ed3e26450f1b8afdad889f2f6ccd94b06.json  query-3412698917340a06dc0b58c68416e2f39414fc8d7cd669fae02a09ac04c265d7.json  query-368ba15368da4bf1a73536177533224bcaf80b350ba1cdeae758c56859f1c158.json  query-41819cf933c55bdc06b40379f6499a5eae6fd24d3a9715970fc7923f6b4cae00.json  query-42b418a948630c08fac294a53e4b821b5d0176fb1eab265a154d1b532630b22f.json  query-42ea944189e31f8b3a9f7e54dc199af6352f706cc69855ead6a82048b6b50ec0.json  query-4414f8bfc5ea6def2766e4206780369379b6e3916715f3313a22e63b21cc1497.json  query-44206d6268686fd775902f78e6a7bce4475beef54273e55eb6a5d4e4e432108f.json  query-46cb9c2a4a45168a74dfa46465e36d6d47b87f34a03ef28bbe8f4ecdf5f61f4e.json  query-46ffeb3fa501836d81c641cc3226beefb1e33b1137de23ff2218917fc08bf47a.json  query-4ded435a8614591fff28408de7754fb998499c29cce0052ae33e3494adc6304a.json  query-512bb1fb6e20810fdfb0875b88ffedce7a9ba68a8bc8e03e2edc877aa12fb0e1.json  query-555209660785c05a8cc865c585146786652dbe2a65312612bd99a72c335540fd.json  query-63b226452a2d82a66ce83fbdd66804cb7ae132095f0ef1af32467f73879aad8b.json  query-63e8f998aa73d55c2a0c5d66983f02cc0479e92e4f88e8496ea04198e6c47df5.json  query-6edf4add4ee46b55641f68d9c469d86782869a2ab1f6ee900db5ebba22bffe64.json  query-707bc93558d6688e3618326a0c2d9b42e7c1d473689e6c2a245f5928804da46a.json  query-7729918281e57a1b6e6878b4a4591b4ad6cfffc6b0ddc313880836d596506e47.json  query-7a85da025ff77f75fb8d71bdbc7a1f89483c593f095e3f1bc4faba9ade25b4b6.json  query-7d73b824bab5e20e02eeaecd6cd21a8f8ecd7ecfb6103930828032d684c8900c.json  query-7df7af1559917a3a0955901118dbc4c992b4503c6d809c369aee47975f444032.json  query-889e3818d637a037e8318301bccd1b87aa34c3583092d345e256d19632d64592.json  query-8c358033e0976b85a54a910aa634dda9d60c4e093712483c97e15d4ff11dda41.json  (+42 more)
nts-pool-management/api/: Cargo.toml
nts-pool-management/api-server/: Cargo.toml
nts-pool-management/assets/: captcha.js  components.css  index.css  main.css  poll.js  reset.css  small.css  typography.css  variables.css
nts-pool-management/fixtures/: users.sql
nts-pool-management/migrations/: 20250721151818_users.down.sql  20250721151818_users.up.sql  20250723064439_servers.down.sql  20250723064439_servers.up.sql  20250724075349_authentication_methods.down.sql  20250724075349_authentication_methods.up.sql  20250731210835_server-rename-to-timesource.down.sql  20250731210835_server-rename-to-timesource.up.sql  20250801122804_server-manager-rename.down.sql  20250801122804_server-manager-rename.up.sql  20250806141335_user-activation.down.sql  20250806141335_user-activation.up.sql  20250807131648_countries-default.down.sql  20250807131648_countries-default.up.sql  20250815131125_time_source_delete.down.sql  20250815131125_time_source_delete.up.sql  20250903074633_session-revoke.down.sql  20250903074633_session-revoke.up.sql  20250904142303_time_sources_weight.down.sql  20250904142303_time_sources_weight.up.sql  20250917100355_monitors.down.sql  20250917100355_monitors.up.sql  20250918064229_monitor-samples.down.sql  20250918064229_monitor-samples.up.sql  20250930115105_pool-authentication-token.down.sql  20250930115105_pool-authentication-token.up.sql  20251030133648_update-triggers.down.sql  20251030133648_update-triggers.up.sql  20251106143013_monitor_samples_index.down.sql  20251106143013_monitor_samples_index.up.sql  20251121151339_time_source_score_view.down.sql  20251121151339_time_source_score_view.up.sql  20251211081904_srv_monitor.down.sql  (+11 more)
nts-pool-monitor/: Cargo.toml  config.toml
nts-pool-shared/: Cargo.toml  README.md
pool-nts/: Cargo.toml  README.md
(+169 files in other folders)
