[workspace]
members = ["nts-pool-ke", "nts-pool-management", "nts-pool-monitor"]
resolver = "3"

# Global settings for our crates
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pendulum-project/nts-pool"
homepage = "https://github.com/pendulum-project/nts-pool"
readme = "./README.md"
description = "Pool management system for NTS servers"
publish = false
rust-version = "1.88"                                       # MSRV

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
debug = 2

[workspace.dependencies]
aead = "0.5.0"
aes-siv = "0.7.0"
anyhow = "1.0.98"
argon2 = "0.5.3"
askama = "0.14.0"
axum = "0.8.4"
axum-extra = "0.10.1"
chrono = "0.4.41"
maxminddb = "0.26.0"
phf = { version = "0.12.1", features = ["macros"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", default-features = false }
serde = { version = "1.0.194" }
serde_json = "1.0.140"
serde_qs = "0.15.0"
sqlx = "0.8.6"
timestamped-socket = "0.2.2"
tower-http = { version = "0.6.4" }
tokio = { version = "1.44", default-features = false }
toml = { version = ">=0.6.0,<0.9.0", default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.0", default-features = false }
uuid = "1.17.0"
rustls = { version = "0.23.27" }
rustls-platform-verifier = "0.6.0"
tokio-rustls = { version = "0.26.0" }
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.18", default-features = false }
eyre = "0.6.11"
derive_more = "2.0.1"
zeroize = "1.7"
