[package]
name = "nts-pool-dns"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true # MSRV

[package.metadata.cargo-udeps.ignore]
normal = [
    "ntp-proto",
    "rustls-platform-verifier",
    "rustls-pemfile2",
    "rustls",
    "serde",
    "tokio-rustls",
    "toml",
    "tracing",
    "tracing-subscriber",
]

[features]
default = []
fuzz = []

[dependencies]
notify.workspace = true
nts-pool-shared.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "io-util",
    "fs",
    "net",
    "macros",
    "time",
    "signal",
    "sync",
] }
tokio-rustls = { workspace = true, features = ["logging"] }
tokio-util = { workspace = true, features = ["rt"] }
toml = { workspace = true, default-features = false, features = ["parse"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
hickory-server = { version = "0.25.2", features = ["dnssec-aws-lc-rs"] }
async-trait = "0.1.89"
eyre.workspace = true

[[bin]]
name = "nts-pool-dns"
path = "src/main.rs"
