[package]
name = "nts-pool-ke"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true # MSRV

[package.metadata.cargo-udeps.ignore]
normal = [
    "ntp-proto",
    "rustls-platform-verifier",
    "rustls-pemfile2",
    "rustls",
    "serde",
    "tokio-rustls",
    "toml",
    "tracing",
    "tracing-subscriber",
]

[features]
default = []
fuzz = []

[dependencies]
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "io-util",
    "fs",
    "net",
    "macros",
    "time",
    "sync",
] }
toml = { workspace = true, default-features = false, features = ["parse"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
    "std",
    "fmt",
    "ansi",
] }
rustls = { workspace = true, features = ["logging", "std"] }
rustls-platform-verifier = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio-rustls = { workspace = true, features = ["logging"] }
phf.workspace = true
maxminddb.workspace = true
rand.workspace = true

[[bin]]
name = "nts-pool-ke"
path = "bin/nts-pool-ke.rs"
