[package]
name = "nts-pool-ke"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true # MSRV

[package.metadata.cargo-udeps.ignore]
normal = [
    "ntp-proto",
    "rustls-platform-verifier",
    "rustls-pemfile2",
    "rustls",
    "serde",
    "tokio-rustls",
    "toml",
    "tracing",
    "tracing-subscriber",
]

[features]
default = []
fuzz = []

[dependencies]
maxminddb.workspace = true
notify.workspace = true
nts-pool-shared.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
phf.workspace = true
pool-nts.workspace = true
rand.workspace = true
rustls = { workspace = true, features = ["logging", "std"] }
rustls-platform-verifier = { workspace = true }
scc = "3.3.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha3.workspace = true
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "io-util",
    "fs",
    "net",
    "macros",
    "time",
    "signal",
    "sync",
] }
tokio-rustls = { workspace = true, features = ["logging"] }
tokio-util = { workspace = true, features = ["rt"] }
toml = { workspace = true, default-features = false, features = ["parse"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
    "std",
    "fmt",
    "ansi",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[[bin]]
name = "nts-pool-ke"
path = "bin/nts-pool-ke.rs"
