[workspace]
members = ["api", "shared", "ui-server"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.4" }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

shared = { path = "shared" }
