[package]
name = "nts-pool-management"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
askama = { workspace = true }
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
tokio = { workspace = true, default-features = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }
chrono = { workspace = true }
uuid = { workspace = true }
rustls = { workspace = true }
