[package]
name = "nts-pool-management"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
livereload = []

[dependencies]
argon2 = { workspace = true, features = ["std"] }
askama = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie", "cookie-private", "cookie-key-expansion", "typed-header"] }
headers.workspace = true
maxminddb.workspace = true
notify.workspace = true
nts-pool-shared = { workspace = true, features = ["sqlx"] }
phf.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
tokio = { workspace = true, default-features = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4"] }
rustls = { workspace = true }
jsonwebtoken = { workspace = true }
lettre = { workspace = true, default-features = false, features = [
    "builder",
    "smtp-transport",
    "pool",
    "hostname",
    "rustls",
    "aws-lc-rs",
    "rustls-platform-verifier",
    "tokio1",
    "tokio1-rustls",
    "tracing",
] }
rand = { workspace = true }
eyre = { workspace = true }
derive_more = { workspace = true, features = ["full"] }

[dev-dependencies]
testcontainers = { workspace = true }
scraper = { workspace = true }
