[package]
name = "nts-pool-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true # MSRV

[features]
__internal-fuzz = []

[dependencies]
aead.workspace = true
aes-siv.workspace = true
eyre = { workspace = true }
nts-pool-shared.workspace = true
pool-nts.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
timestamped-socket.workspace = true
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "macros", "net", "signal", "sync", "fs"] }
tokio-rustls.workspace = true
toml = { workspace = true, default-features = false, features = ["parse"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
    "std",
    "fmt",
    "ansi",
] }
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[[bin]]
name = "nts-pool-monitor"
path = "bin/nts-pool-monitor.rs"
