[package]
name = "nts-pool-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
sqlx = ["dep:sqlx"]

[dependencies]
serde.workspace = true
sqlx = { workspace = true, optional = true, default-features = false, features = ["macros"] }
