[package]
name = "pool-nts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
fuzz = []

[dependencies]
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
