[package]
name = "nts-pool-management-api-server"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, default-features = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }

nts-pool-management-shared = { workspace = true }
