[package]
name = "ui-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.4", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

shared = { path = "../shared" }
