[package]
name = "nts-pool-management-ui-server"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
askama = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "charset",
    "http2",
    "json",
    "rustls-tls-native-roots-no-provider",
] }
tokio = { workspace = true, default-features = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }
nts-pool-management-shared = { workspace = true }
